# django-project

./: README.md  pyproject.toml
.github/workflows/: django-project-ci.yml
pname/users/: admin.py  forms.py
project/: settings.py
