[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Ahmed Shahwan <ahmed@shahwan.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
psycopg2-binary = "^2.8.6"
django-environ = "^0.4.5"
sentry-sdk = "^0.19.1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
